--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                 <a onclick="closeMenu()" href="#certification">CERTIFICADOS</a>
             </div>
         </nav>
-
         <div class="logo-container">
             <div class="logo-icon">
                 <p class="logo"><img src="./assets/img/icon.png" alt="" srcset="" width="50px" height="50px"></p>
@@ -96,7 +95,7 @@
 
         <div class="about-container">
             <div class="about-info">
-                <h2>Quem eu sou?</h2>
+                <h2>Quem sou eu?</h2>
                 <p>Olá! Eu sou o Jonh, um garoto de 25 anos apaixonado por tecnologia e inovação. Sou um Desenvolvedor
                     <strong>Full Stack</strong> formado em Análise e Desenvolvimento de Sistemas.
                     Moro em Campo Grande/MS.
@@ -109,7 +108,7 @@
 
             </div>
             <div class="about-photo">
-                <img src="" alt="minha foto">
+                <img src="./assets/img/foto.png" alt="minha foto">
             </div>
         </div>
     </section>
@@ -222,14 +221,14 @@
 
         <div class="certified-container">
             <div class="certified-mimic">
-                <img class="certified-img img-center" src="./assets/img/certificado_ingles.PNG"
+                <img class="certified-img img-center" src="./assets/img/foto.png"
                     alt="certificado de ingles">
             </div>
             <div class="certified-mimic">
-                <img class="certified-img" src="./assets/img/certificado_front-end.PNG" alt="certificado de front-end">
+                <img class="certified-img" src="./assets/img/foto.png" alt="certificado de front-end">
             </div>
             <div class="certified-mimic">
-                <img class="certified-img" src="./assets/img/certificado_db.PNG" alt="certificado de database">
+                <img class="certified-img" src="./assets/img/foto.png" alt="certificado de database">
             </div>
         </div>
     </section>
